--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "voca": "^1.4.0"
   }
 }
