--- a/package.json
+++ b/package.json
@@ -18,7 +18,5 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {
-    "voca": "^1.4.0"
-  }
+  "dependencies": {}
 }
