--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "voca": "^1.4.0"
+  }
 }
